--- a/site/index.html
+++ b/site/index.html
@@ -6,6 +6,8 @@
 <body>
 	<h1>Module-2</h1>
 	<h2>Git Status</h2>
+	<h3> Browser-Sync is Awesome</h3>
+	<h4>Learning Code is Awesome</h4>
 
 </body>
 </html>
